[gd_scene load_steps=6 format=3 uid="uid://cviiv3phf8uy2"]

[ext_resource type="Script" uid="uid://daborhbprgsmt" path="res://assets/scripts/main_menu.gd" id="1_1taxn"]
[ext_resource type="Script" uid="uid://c4r4anr5q5u3u" path="res://assets/scripts/mainmenu/main.gd" id="2_0yby4"]
[ext_resource type="FontFile" uid="uid://pp6uta6h61is" path="res://assets/fonts/Tiny-Regular.ttf" id="3_bvm21"]
[ext_resource type="Script" uid="uid://b8gwlxucibvcf" path="res://assets/scripts/mainmenu/seeker_picker.gd" id="4_mt0xs"]
[ext_resource type="Texture2D" uid="uid://borex5vqc1i4e" path="res://assets/images/seeker_icons/big_cheese.png" id="5_lm47t"]

[node name="menuLayer" type="CanvasLayer"]
script = ExtResource("1_1taxn")

[node name="menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="Control" parent="menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_0yby4")

[node name="Title" type="RichTextLabel" parent="menu/Main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 23.0
offset_bottom = 71.0
grow_horizontal = 2
theme_override_fonts/normal_font = ExtResource("3_bvm21")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[wave]SUPERS HIDE AND SEEK"
fit_content = true
scroll_active = false

[node name="WIP" type="RichTextLabel" parent="menu/Main"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
bbcode_enabled = true
text = "WORK IN PROGRESS"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="ButtonsList" type="VBoxContainer" parent="menu/Main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -196.25
offset_right = 229.0
offset_bottom = 196.25
grow_vertical = 2
alignment = 1

[node name="NetworkingType" type="OptionButton" parent="menu/Main/ButtonsList"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "STEAM"
popup/item_0/id = 0
popup/item_1/text = "LAN"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="menu/Main/ButtonsList"]
layout_mode = 2

[node name="JOIN" type="Button" parent="menu/Main/ButtonsList"]
layout_mode = 2
text = "JOIN"

[node name="HOST" type="Button" parent="menu/Main/ButtonsList"]
layout_mode = 2
text = "HOST"

[node name="HSeparator2" type="HSeparator" parent="menu/Main/ButtonsList"]
layout_mode = 2

[node name="SELECTSEEKER" type="Button" parent="menu/Main/ButtonsList"]
layout_mode = 2
text = "SELECT SEEKER"

[node name="SELECTHIDER" type="Button" parent="menu/Main/ButtonsList"]
layout_mode = 2
text = "SELECT HIDER"

[node name="HSeparator3" type="HSeparator" parent="menu/Main/ButtonsList"]
layout_mode = 2

[node name="SETTINGS" type="Button" parent="menu/Main/ButtonsList"]
layout_mode = 2
text = "SETTINGS"

[node name="SeekerPicker" type="Control" parent="menu" node_paths=PackedStringArray("_seekersHolder", "_currentSeeker")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_mt0xs")
_seekersHolder = NodePath("Seekers/FlowContainer")
_currentSeeker = NodePath("CurrentSeeker")

[node name="SelectSeekerLabel" type="Label" parent="menu/SeekerPicker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -235.5
offset_right = 50.5
offset_bottom = -212.5
grow_horizontal = 2
grow_vertical = 2
text = "select seeker"

[node name="Seekers" type="Control" parent="menu/SeekerPicker"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -172.0
offset_right = 397.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="FlowContainer" type="FlowContainer" parent="menu/SeekerPicker/Seekers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Button" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button2" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button3" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button4" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button5" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button6" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button7" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button8" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button9" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button10" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button11" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Button12" type="Button" parent="menu/SeekerPicker/Seekers/FlowContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "fredbear"
icon = ExtResource("5_lm47t")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="CurrentSeeker" type="Button" parent="menu/SeekerPicker"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -85.0
offset_top = -218.0
offset_right = 85.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
button_mask = 0
icon = ExtResource("5_lm47t")
expand_icon = true

[node name="CurrentSeekerLabel" type="Label" parent="menu/SeekerPicker"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -57.0
offset_top = -263.0
offset_right = 57.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 0
text = "current seeker"

[node name="BACK" type="Button" parent="menu/SeekerPicker"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "BACK"

[connection signal="item_selected" from="menu/Main/ButtonsList/NetworkingType" to="menu/Main" method="_on_networking_type_item_selected"]
[connection signal="pressed" from="menu/Main/ButtonsList/JOIN" to="menu/Main" method="_on_join_pressed"]
[connection signal="pressed" from="menu/Main/ButtonsList/HOST" to="menu/Main" method="_on_host_pressed"]
[connection signal="pressed" from="menu/Main/ButtonsList/SELECTSEEKER" to="menu/Main" method="_on_selectseeker_pressed"]
[connection signal="pressed" from="menu/Main/ButtonsList/SELECTHIDER" to="menu/Main" method="_on_selecthider_pressed"]
[connection signal="pressed" from="menu/Main/ButtonsList/SETTINGS" to="menu/Main" method="_on_settings_pressed"]
[connection signal="pressed" from="menu/SeekerPicker/BACK" to="menu/SeekerPicker" method="_on_back_pressed"]
